2.4.9:

2005-01-18  Murray Cumming  <murrayc@murrayc.com>

	* demos/demowindow.cc: #ifdef on __SUNPRO_CC instead of 
	GLIBMM_COMPILER_SUN_FORTE, though we should really find out why 
	GLIBMM_COMPILER_SUN_FORTE is not defined with the SUN compiler.
	* demos/example_stockbrowser.cc: Remove some consts that the 
	SUN compiler does not allow.
	* gtk/src/radiobutton.hg: Remove duplicate Group typedef, which 
        SUN Forte complains about.
        * This should fix the remaining issues in bug #154973.
	Joel Fredrikson helped with these fixes.
        * gdk/src/pixbuf.hg: PixbufFormatTraits::realease_c_type(): 
        Comment-out an unused parameter name, to avoid a warning with g++.

2005-01-18  Murray Cumming  <murrayc@murrayc.com>

	* MSVC_Net2003/gtkmm/Makefile.am, MSVC_Net2003/gdkmm/Makefile.am: Add 
	the *config.h files to DISTCLEANFILES, to fix the distcheck. 

2004-12-16  Roger Leigh  <roger@whinlatter.uklinux.net>

	* configure.in: Bug #160244: Ask automake to use the utar format, to 
	fix the problems with the long filenames of our documentation in the 
	tarballs.

2004-12-16  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/dialogs/messagedialog/examplewindow.cc: The 
	ButtonsType enum is not an ORable flag.
	* docs/tutorial/gtkmm-tut.xml: Fix the text where it says that it is.

2004-12-11  Cedric Gustin <cedric.gustin@swing.be>

	* configure.in: parse version tags at configure time (for
	the resource files). 
	* MSVC_Net2003/atkmm/atkmm-1.6.rc.in,
	MSVC_Net2003/pangomm/pangomm-1.4.rc.in,
	MSVC_Net2003/gdkmm/gdkmm-2.4.rc.in,
	MSVC_Net2003/gtkmm/gtkmm-2.4.rc.in: New resource file.
	* MSVC_Net2003/atkmm/Makefile.am, MSVC_Net2003/pangomm/Makefile.am,
	MSVC_Net2003/gdkmm/Makefile.am, MSVC_Net2003/gtkmm/Makefile.am:
	include resource files in distribution.
	* MSVC_Net2003/atkmm/atkmm.vcproj,
	MSVC_Net2003/pangomm/pangomm.vcproj,
	MSVC_Net2003/gdkmm/gdkmm.vcproj, MSVC_Net2003/gtkmm/gtkmm.vcproj:
	Added resource file. 
	