@@ -5,5 +5,9 @@ DISTCLEANFILES = gdkmmconfig.h
 
 EXTRA_DIST = gdkmmconfig.h gdkmm.vcproj gdkmm-2.4.rc
 
-gdkmmconfig.h: $(top_builddir)/gdk/gdkmmconfig.h
-	cp -f $< $@
+# Copy config file generated by the configure script. Dependency is 
+# wht respect to the .h.in file, to prevent an error with 'make distcheck'.
+# See http://sources.redhat.com/automake/automake.html#distcleancheck
+
+gdkmmconfig.h: $(top_srcdir)/gdk/gdkmmconfig.h.in $(top_srcdir)/configure.in
+	cp -f $(top_builddir)/gdk/gdkmmconfig.h $@
