@@ -5,5 +5,9 @@ DISTCLEANFILES = gtkmmconfig.h
 
 EXTRA_DIST = gtkmmconfig.h gtkmm.vcproj gtkmm-2.4.rc
 
-gtkmmconfig.h: $(top_builddir)/gtk/gtkmmconfig.h
-	cp -f $< $@
+# Copy config file generated by the configure script. Dependency is 
+# wht respect to the .h.in file, to prevent an error with 'make distcheck'.
+# See http://sources.redhat.com/automake/automake.html#distcleancheck
+
+gtkmmconfig.h: $(top_srcdir)/gtk/gtkmmconfig.h.in $(top_srcdir)/configure.in
+	cp -f $(top_builddir)/gtk/gtkmmconfig.h $@
