@@ -1,3 +1,9 @@
+2005-01-24  Cedric Gustin <cedric.gustin@swing.be>
+
+	* MSVC_Net2003/gdkmm/Makefile.am, MSVC_Net2003/gtkmm/Makefile.am:
+	Rewrote rule for local copy of glibmmconfig.h (required for 'make
+	distcheck').
+	
 2.4.9:
 
 2005-01-18  Murray Cumming  <murrayc@murrayc.com>
